v0.19.0/_sources/gallery/embellishments/timestamp.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/embellishments/timestamp.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_embellishments_timestamp.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_embellishments_timestamp.py:


Timestamp
=========

The :meth:`pygmt.Figure.timestamp` method can draw the GMT timestamp logo on the plot.
The timestamp will always be shown relative to the Bottom Left (BL) corner of the plot.
By default, the ``offset`` and ``justify`` parameters are set to ``("-54p", "-54p")``
(x-, y-directions) and ``"BL"`` (Bottom Left), respectively.

.. GENERATED FROM PYTHON SOURCE LINES 12-22

.. code-block:: Python

    import os

    import pygmt
    from pygmt.params import Axis

    fig = pygmt.Figure()
    fig.basemap(region=[20, 30, -10, 10], projection="X10c/5c", frame=True)
    fig.timestamp()
    fig.show()




.. image-sg:: /gallery/embellishments/images/sphx_glr_timestamp_001.png
   :alt: timestamp
   :srcset: /gallery/embellishments/images/sphx_glr_timestamp_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 23-25

Additionally, a custom label can be added via the ``label`` parameter. The font can be
defined via the ``font`` parameter and the timestamp string format via ``timefmt``.

.. GENERATED FROM PYTHON SOURCE LINES 25-44

.. code-block:: Python


    os.environ["TZ"] = "Pacific/Honolulu"  # optionally set the time zone

    fig = pygmt.Figure()
    fig.coast(
        region="d",
        projection="H10c",
        land="black",
        water="cornsilk",
        frame=Axis(annot=True, tick=True, grid=True),
    )
    fig.timestamp(
        label="Powered by PyGMT",
        justify="TL",
        font="Times-Bold",
        timefmt="%Y-%m-%dT%H:%M:%S%z",
    )
    fig.show()




.. image-sg:: /gallery/embellishments/images/sphx_glr_timestamp_002.png
   :alt: timestamp
   :srcset: /gallery/embellishments/images/sphx_glr_timestamp_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.326 seconds)


.. _sphx_glr_download_gallery_embellishments_timestamp.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: timestamp.ipynb <timestamp.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: timestamp.py <timestamp.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: timestamp.zip <timestamp.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
